Fix checkbox alignment on EN banner radios
There was some sub-pixel rendering happening on the en
checkbox that was causing the check to be mis-aligned.

This increases the size and sets a scale to improve
sub-pixel rendering of a radio which has appearance
none.

Ticket: https://phabricator.wikimedia.org/T379621

--- a/src/themes/Treedip/DonationForm/BubbleForm/radio-input.scss
+++ b/src/themes/Treedip/DonationForm/BubbleForm/radio-input.scss
@@ -1,6 +1,6 @@
 @use 'sass:math';
 
-$size: 10px;
+$size: 12px;
 
 @mixin styles( $left: 6px ) {
 	appearance: none;
